apps/talos_cluster/authentik/release.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - auth.midnightthoughts.space
    - ldap.midnightthoughts.space
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
      timeouts:
        request: 240s
        backendRequest: 0s
sops:
  kms: []
  gcp_kms: []
  azure_kv: []
  hc_vault: []
  age:
    - recipient: age1esjyg2qfy49awv0ptkzvpk425adczjr38m37w2mmcahzc4p8n54sll2nzh
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2aEZVdzVpbWFYYkxlR1lJ
[...]
        LpuQF38AscU+pkNoi2WBFw2MsvEYF+EtPJczESIwiMetehRj2n4KxQ==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-02-19T14:22:13Z"
  mac: ENC[AES256_GCM,data:cVtB9Yn3DtLT7DHh6r4y+Kooap4o3Vllx/nnNc8Zd2S2nQ5gmVSG/RBv88pNwCnybsUyK/Yd+1I1jwTzxIz9ZI1gosL23fLhJ9LK/Yzk3d56Z7krqXGp5IIw7I/lZyzyGlSp8R50KpGhZ8BObUU2C7mU7D+/W7ctnMj1mJLP+xg=,iv:4bdFaUt6lBYog6kpsZiixm6kYkzKRj8hwA335th9GVo=,tag:HorsmiQJ9ttuYC5rkzevCA==,type:str]
  pgp: []
  encrypted_regex: ^(adminPassword|adminEmail|jenkinsAdminEmail|securityRealm|gerrit.config|routing_key|DATABASE_URL|SMTP_PASSWORD|SECRET_KEY_BASE|admin_password|extraCommands|key|clickhouseDatabaseURL|databaseURL|client_id|client_secret|secret_key_base|otp_secret|private_key|public_key|primaryKey|deterministicKey|keyDerivationSalt|token|clientId|secretKey|installationId|installationKey|uriOverride|adminToken.value|password.value|sql_password|erlangCookie|AUTHENTICATION_PASSWORD|ROOM_API_SECRET_ [...]
  version: 3.9.1
